refactor: Bridge RegistryData accessors (#3292)
* refactor: bridge RegistryData accessors

Expose registry backed values directly on their protocol objects. Deprecate RegistryData and migrate to the new API's

* refactor: Delete #blockEntity in favour of the null check